--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -5,10 +5,14 @@
 <meta http-equiv='Content-Type' content='text/html;charset=UTF-8' />
 <link rel="stylesheet" href="./sapui5-exploration/style/style.css">
 
-<script src="resources/sap-ui-core.js" id="sap-ui-bootstrap"
+<script
+	id="sap-ui-bootstrap"
+	src="resources/sap-ui-core.js" 
+	data-sap-ui-theme="sap_bluecrystal"
 	data-sap-ui-libs="sap.m, sap.ui.commons"
-	data-sap-ui-theme="sap_bluecrystal" data-sap-ui-bindingSyntax="complex"
+	data-sap-ui-bindingSyntax="complex"
 	data-sap-ui-compatVersion="edge"
+	data-sap-ui-preload="async"
 	data-sap-ui-resourceroots='{
            "sapui5-exploration": "./",
             	"mvc": "./sapui5-exploration/"
@@ -18,26 +22,12 @@
 <!-- only load the mobile lib "sap.m" and the "sap_bluecrystal" theme -->
 
 <script>
- new sap.ui.getCore().attachInit(function () {
-	new sap.m.Shell("theShell", {
-		app : new sap.ui.core.ComponentContainer({
+	sap.ui.getCore().attachInit(function() {
+		new sap.ui.core.ComponentContainer({
 			name : "sapui5-exploration",
 			height: '100%'
-		})
-	}).placeAt("content");
- });
-	
-	
-	// 	var app = new sap.m.App({
-	// 		initialPage : "idMain1"
-	// 	});
-	// 	var page = sap.ui.view({
-	// 		id : "idMain1",
-	// 		viewName : "projectmikron.Main",
-	// 		type : sap.ui.core.mvc.ViewType.JS
-	// 	});
-	// 	app.addPage(page);
-	// 	app.placeAt("content");
+		}).placeAt("content");
+ 	});
 </script>
 
 </head>
