--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -4,28 +4,35 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta http-equiv='Content-Type' content='text/html;charset=UTF-8' />
 <link rel="stylesheet" href="./sapui5-exploration/style/style.css">
+<title>SAP</title>
 
 <script
 	id="sap-ui-bootstrap"
-	src="resources/sap-ui-core.js" 
+	src="https://sapui5.netweaver.ondemand.com/resources/sap-ui-core.js"
 	data-sap-ui-theme="sap_bluecrystal"
 	data-sap-ui-libs="sap.m, sap.ui.commons"
 	data-sap-ui-bindingSyntax="complex"
 	data-sap-ui-compatVersion="edge"
 	data-sap-ui-preload="async"
 	data-sap-ui-resourceroots='{
-           "sapui5-exploration": "./",
-            	"mvc": "./sapui5-exploration/"
-         }'>
-	
+        	"sapui5-exploration": "./",
+            "mvc": "./sapui5-exploration/",
+			"view": "./view/",
+			"controller": "./controller/",
+			"i18n": "./i18n/",
+			"style": "./style/"
+        }'>
+
 </script>
 <!-- only load the mobile lib "sap.m" and the "sap_bluecrystal" theme -->
 
 <script>
 	sap.ui.getCore().attachInit(function() {
-		new sap.ui.core.ComponentContainer({
-			name : "sapui5-exploration",
-			height: '100%'
+		new sap.m.Shell({
+	    	app: new sap.ui.core.ComponentContainer({
+				name : "sapui5-exploration",
+				height: '100%'
+			})
 		}).placeAt("content");
  	});
 </script>
