--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -8,7 +8,7 @@
 
 <script
 	id="sap-ui-bootstrap"
-	src="https://sapui5.netweaver.ondemand.com/resources/sap-ui-core.js"
+	src="./sap-ui-core.js"
 	data-sap-ui-theme="sap_bluecrystal"
 	data-sap-ui-libs="sap.m, sap.ui.commons"
 	data-sap-ui-bindingSyntax="complex"
